--- a/_posts/2020-09-19-leetcode-3.markdown
+++ b/_posts/2020-09-19-leetcode-3.markdown
@@ -66,7 +66,8 @@ class Solution
         if(s == null || s.length() == 0)
             return maxLen;
         
-        // Define a map to save character and index, so we can skip the characters immidately when we found a repeated character.
+        // Define a map to save character and index
+        // We can skip the characters immidately when we found a repeated character.
         Map<Character, Integer> map = new HashMap<>();
         
         // Sliding window
