--- a/_posts/2020-09-19-leetcode-3.markdown
+++ b/_posts/2020-09-19-leetcode-3.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  Longest Substring Without Repeating Characters
+title:  3. Longest Substring Without Repeating Characters
 date:   2020-09-19 13:47
 image:  leetcode.jpeg
 tags:   LeetCode
