--- a/_posts/2020-10-12-LeetCode-9.markdown
+++ b/_posts/2020-10-12-LeetCode-9.markdown
@@ -6,6 +6,8 @@ image:  leetcode.jpeg
 tags:   LeetCode
 ---
 
+## Problem
+
 Determine whether an integer is a palindrome. An integer is a palindrome when it reads the same backward as forward.
 
 Follow up: Could you solve it without converting the integer to a string?
