--- a/_posts/2020-11-15-LeetCode-16.markdown
+++ b/_posts/2020-11-15-LeetCode-16.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post 
-title:  15 3 Sum Closest
+title:  16. 3 Sum Closest
 date:   2020-11-15 21:06
 image:  leetcode.jpeg
 tags:   LeetCode
