--- a/_posts/2020-11-15-LeetCode-16.markdown
+++ b/_posts/2020-11-15-LeetCode-16.markdown
@@ -6,6 +6,8 @@ image:  leetcode.jpeg
 tags:   LeetCode
 ---
 
+## Problem
+
 Given an array nums of n integers and an integer target, find three integers in nums such that the sum is closest to target. Return the sum of the three integers. You may assume that each input would have exactly one solution.
 
 ```
@@ -25,7 +27,7 @@ Constraints:
 * -10^3 <= nums[i] <= 10^3
 * -10^4 <= target <= 10^4
 
-## Problem
+## Solution
 
 This question is similiar like LeetCode 16. It can be solve by using the same approach. The only different here is we need to find the closest number.
 
