--- a/_posts/2020-11-17-LeetCode-17.markdown
+++ b/_posts/2020-11-17-LeetCode-17.markdown
@@ -84,5 +84,5 @@ class Solution
 
 ## Time & Space Complexity:
 
-* **Time Complexity: O(3<sup>n</sup> * 4<sup>m s</sup>)**: where N is the number of digits in the input that maps to 3 letters (e.g. 2, 3, 4, 5, 6, 8) and M is the number of digits in the input that maps to 4 letters (e.g. 7, 9), and N+M is the total number digits in the input.
-* **Space Complexity: O(3<sup>n</sup> * 4<sup>m s</sup>)**: since one has to keep 3<sup>n</sup> * 4<sup>m s</sup> solutions.
+* **Time Complexity: O(3<sup>n</sup> * 4<sup>m</sup>)**: where N is the number of digits in the input that maps to 3 letters (e.g. 2, 3, 4, 5, 6, 8) and M is the number of digits in the input that maps to 4 letters (e.g. 7, 9), and N+M is the total number digits in the input.
+* **Space Complexity: O(3<sup>n</sup> * 4<sup>m</sup>)**: since one has to keep 3<sup>n</sup> * 4<sup>m</sup> solutions.
