--- a/_posts/2020-11-20-LeetCode-18.markdown
+++ b/_posts/2020-11-20-LeetCode-18.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post 
-title:  18. Letter Combinations of a Phone Number
+title:  18. 4 Sum 
 date:   2020-11-20 21:38
 image:  leetcode.jpeg
 tags:   LeetCode
