--- a/_posts/2020-11-20-Java-7-Enum.markdown
+++ b/_posts/2020-11-20-Java-7-Enum.markdown
@@ -54,6 +54,9 @@ public class Test
 // RED
 ```
 
+<!-- Line breaks -->
+<br />
+
 ## Import points of enum
 
 * Every enum internally implemented by using class.
@@ -107,6 +110,9 @@ public class Test
 // RED
 ```
 
+<!-- Line breaks -->
+<br />
+
 ## Constructor and Methods
 
 * enum can contain constructor and it is executed separately for each enum constant at the time of enum class loading.
@@ -150,6 +156,9 @@ public class Test
 // Universal Color
 ```
 
+<!-- Line breaks -->
+<br />
+
 ## Enum with Customized Value in Java
 
 By default enums have their own string values, we can also assign some customer values to enums.
@@ -160,6 +169,9 @@ enum Fruits
     APPLE(“RED”), BANANA(“YELLOW”), GRAPES(“GREEN”);
 }
 ```
+
+<!-- Line breaks -->
+<br />
 
 Now to use this enum in code, there are some points we have to follow:
 
@@ -203,6 +215,9 @@ public class EnumParameterTest
 // name : GREEN action: GO 
 // name : ORANGE action: SLOW DOWN 
 ```
+
+<!-- Line breaks -->
+<br />
 
 Reference
 
