--- a/_posts/2020-11-21-LeetCode-19.markdown
+++ b/_posts/2020-11-21-LeetCode-19.markdown
@@ -31,6 +31,9 @@ Input: head = [1,2], n = 1
 Output: [1]
 ```
 
+<!-- Line breaks -->
+<br />
+
 Constraints:
 
 * The number of nodes in the list is sz.
