--- a/_posts/2020-12-29-LeetCode-36.markdown
+++ b/_posts/2020-12-29-LeetCode-36.markdown
@@ -112,6 +112,9 @@ class Solution
 }
 ```
 
+<!-- Line breaks -->
+<br />
+
 ## Time & Space Complexity:
 
 * **Time Complexity: O(n<sup>2</sup>)**: Two for loop.
