--- a/_posts/2021-01-03-LeetCode_37.markdown
+++ b/_posts/2021-01-03-LeetCode_37.markdown
@@ -104,5 +104,5 @@ class Solution
 
 ## Time & Space Complexity:
 
-* **Time Complexity: O(n<sup>2</sup>)**: ?
-* **Space Complexity: O(n)**: ?
+* **Time Complexity: ?
+* **Space Complexity: ?
