--- a/_posts/2021-01-10-LeetCode-39.markdown
+++ b/_posts/2021-01-10-LeetCode-39.markdown
@@ -99,5 +99,5 @@ class Solution
 
 ## Time & Space Complexity:
 
-* **Time Complexity**: ?
-* **Space Complexity**: ?
+* **Time Complexity: O(n)**: All number combinations in array candidates.
+* **Space Complexity: O(n)**: We created a tmp list to store the result. 
