--- a/_posts/2021-05-01-LeetCode-59.markdown
+++ b/_posts/2021-05-01-LeetCode-59.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post 
-title:  59. Spiral Matrix
+title:  59. Spiral Matrix II
 date:   2021-05-01 21:59
 image:  leetcode.jpeg
 tags:   LeetCode
