--- a/_posts/2020-10-25-LeetCode-12.markdown
+++ b/_posts/2020-10-25-LeetCode-12.markdown
@@ -67,23 +67,24 @@ Constraints:
 
 * 1 <= num <= 3999
 
-## Solution
-
-According to the question we know the given number is between 1 and 3999. 
-
-We can define few arrays represent all possibilities. Then find correct Roman numerals for ech digit. 
+## Solution 
 
 ```java
-class Solution 
-{
-    public String intToRoman(int num) 
-    {
-        String[] M = {"", "M", "MM", "MMM"};``
-        String[] C = {"", "C", "CC", "CCC", "CD", "D", "DC", "DCC", "DCCC", "CM"};
-        String[] X = {"", "X", "XX", "XXX", "XL", "L", "LX", "LXX", "LXXX", "XC"};
-        String[] I = {"", "I", "II", "III", "IV", "V", "VI", "VII", "VIII", "IX"};
+class Solution {
+    public String intToRoman(int num) {
+        int[] values = {1000, 900, 500, 400, 100, 90, 50, 40, 10, 9, 5, 4, 1};
+        String[] strs = {"M", "CM", "D", "CD", "C", "XC", "L", "XL", "X", "IX", "V", "IV", "I"};
         
-        return M[num/1000] +  C[(num%1000)/100] + X[(num%100)/10] + I[(num%10)];
+        StringBuilder result = new StringBuilder();
+        
+        for(int i = 0; i < values.length; i++) {
+            while(num >= values[i]) {
+                result.append(strs[i]);
+                num = num - values[i];
+            }
+        }
+        
+        return result.toString();
     }
 }
 ```
